hphp/test/zend/good/ext/xsl/tests/xsltprocessor_removeParameter-invalidparam.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('xsl')) {
        die("skip\n");
}
}
