hphp/test/zend/bad/ext/standard/tests/general_functions/bug44295-win.php.skipif
<?php
	if(substr(PHP_OS, 0, 3) != "WIN") die("skip Windows only");
	if (!extension_loaded("spl") || is_dir('c:\\not\\exists\\here')) die("skip");
?>